--- a/terrafomo-gen/config/aws.yaml
+++ b/terrafomo-gen/config/aws.yaml
@@ -30,6 +30,9 @@ field-overrides:
   IamGroupPolicyResource:
     policy: 'TF.Attr s P.Document'
 
+  IamUserPolicyResource:
+    policy: 'TF.Attr s P.Document'
+
   S3BucketResource:
     region: 'TF.Attr s P.Region'
 
