Override s3_bucket_policy resource too

--- a/terrafomo-gen/config/aws.yaml
+++ b/terrafomo-gen/config/aws.yaml
@@ -40,6 +40,9 @@ field-overrides:
     policy: 'TF.Attr s P.Document'
     region: 'TF.Attr s P.Region'
 
+  S3BucketPolicyResource:
+    policy: 'TF.Attr s P.Document'
+
   SecurityGroupRuleResource:
     type': 'TF.Attr s P.NetworkTraffic'
     protocol: 'TF.Attr s P.NetworkProtocol'
